#ifndef Round_H
#define Round_H

class Round
{
   private:
    int rounds;
   public:
    Round();
    Round(int r);
    int getRound();

};

#endif